我的个人网站

--- a/myWebsite/index.html
+++ b/myWebsite/index.html
@@ -44,6 +44,10 @@
            <img src="images/slider-img-2.jpg" alt=""/>
            <img src="images/slider-img-3.jpg" alt=""/>
        </div>
+       <div class="sliders-text">
+           <h1>Hello, I'm MoChi Liu</h1>
+           <em>应聘职位：Web前端工程师</em>
+       </div>
        <div class="next"><span class="span1"></span></div>
        <div class="prev"><span class="span2"></span></div>
    </div>
