我的个人网站

--- a/myWebsite/index.html
+++ b/myWebsite/index.html
@@ -46,7 +46,7 @@
        </div>
        <div class="sliders-text">
            <h1>Hello, I'm MoChi Liu</h1>
-           <em>应聘职位：Web前端工程师</em>
+           <p>应聘职位：Web前端工程师</p>
        </div>
        <div class="next"><span class="span1"></span></div>
        <div class="prev"><span class="span2"></span></div>
