我的个人网站

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -93,10 +93,14 @@
       <div class="col-md-12 text-center"><img src="img/aboutme.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
-          <p>姓名：刘沫池&nbsp;&nbsp;&nbsp;性别:男&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;出生年月:1996.04.30&nbsp;&nbsp;&nbsp;&nbsp;就读院校：黑龙江大学</p>
-          <p>现居住地：黑龙江省哈尔滨市&nbsp;&nbsp;&nbsp;&nbsp;专业:网络工程&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;意向城市:北京/上海/杭州</p>
-          <p>明月几时有，把酒写程序。
-            问君能有几多愁，恰似满屏bug无法修。</p>
+          <p>&nbsp;&nbsp;&nbsp;姓名：刘沫池&nbsp;&nbsp;&nbsp;性别:男&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;出生年月:1996.04.30&nbsp;&nbsp;&nbsp;&nbsp;就读院校：黑龙江大学</p>
+          <p>&nbsp;&nbsp;&nbsp;现居住地：黑龙江省哈尔滨市&nbsp;&nbsp;&nbsp;&nbsp;专业:网络工程&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;意向城市:北京/上海/杭州</p>
+          <p>&nbsp;&nbsp;&nbsp;本人勤奋认真，做事热情积极，较强的责任心。环境适应能力强，能够很快适应新的工作环境。具备团队合作意识，善于协调团队中的人际关系。能够虚心接受他人的意见与建议，对符合的予以采纳。</p>
+          <p>&nbsp;&nbsp;&nbsp;1.熟练使用HTML，CSS,Javascript等前端技术，熟练使用DIV+CSS布局。
+            2.熟悉W3C标准，了解各主流浏览器兼容性问题。
+            3.熟练使用JQ及JS原生DOM操作 。
+            4.熟悉Ajax后台交互。对Bootstrap， AngularJS/VueJs等前端MVC框架有一定了解。
+            5.熟悉node.js/express+ejs框架。</p>
           <p class="text-center"><a class="btn btn-primary" href="resume.pdf" target="_blank"><i class="fa fa-download"></i> 下载简历</a></p>
         </div>
       </div>
@@ -528,6 +532,8 @@
     </div>
   </div>
   <a href="#" id="toTop" style="display: none;"><span id="toTopHover" style="opacity: 0;"></span></a> </div>
+ <div id="fixed-btn"></div>
+ <div id="bigCode"></div>
 
 </div>
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script> 
