我的个人网站

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -71,12 +71,12 @@
           <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
           <li class="hidden"> <a href="#page-top"></a> </li>
           <li> <a class="page-scroll" href="#about">个人信息</a> </li>
-          <li> <a class="page-scroll" href="#services">我的大学</a> </li>
+          <li> <a class="page-scroll" href="#services">工作能力</a> </li>
           <li> <a class="page-scroll" href="#portfolio">项目经验</a> </li>
           <li> <a class="page-scroll" href="#skills">专业技能</a> </li>
-          <li> <a class="page-scroll" href="#resume">教育经历</a> </li>
+          <li> <a class="page-scroll" href="#resume">大学生活</a> </li>
           <li> <a class="page-scroll" href="#testimonials">暂时待定</a> </li>
-          <li> <a class="page-scroll" href="#contact">联系我</a> </li>
+          <li> <a class="page-scroll" href="#contact">联系作者</a> </li>
         </ul>
       </div>
     </div>
@@ -111,7 +111,7 @@
 <div id="services" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>My Services</h2>
+      <h2>工作能力</h2>
       <hr>
     </div>
     <div class="space"></div>
@@ -140,7 +140,7 @@
 <div id="portfolio">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>My Portfolio</h2>
+      <h2>项目经验</h2>
       <hr>
       <div class="clearfix"></div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
@@ -256,7 +256,7 @@
 <div id="skills" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>My Skills</h2>
+      <h2>专业技能</h2>
       <hr>
     </div>
     <div class="row">
@@ -285,7 +285,7 @@
 <div id="resume" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>Experience</h2>
+      <h2>学生工作</h2>
       <hr>
     </div>
     <div class="row">
@@ -345,7 +345,7 @@
   </div>
   <div class="container">
     <div class="section-title center">
-      <h2>Education</h2>
+      <h2>教育经历</h2>
       <hr>
     </div>
     <div class="row">
@@ -470,7 +470,7 @@
 <div id="contact" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>Contact me</h2>
+      <h2>联系作者</h2>
       <hr>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcommodo.</p>
     </div>
@@ -548,5 +548,6 @@
 <script type="text/javascript" src="js/contact_me.js"></script> 
 <script type="text/javascript" src="js/owl.carousel.js"></script> 
 <script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/slider.js"></script>
 </body>
 </html>
