我的个人网站

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -72,9 +72,9 @@
           <li class="hidden"> <a href="#page-top"></a> </li>
           <li> <a class="page-scroll" href="#about">个人信息</a> </li>
           <li> <a class="page-scroll" href="#services">工作能力</a> </li>
-          <li> <a class="page-scroll" href="#portfolio">项目经验</a> </li>
+          <li> <a class="page-scroll" href="#portfolio">大学生活</a> </li>
           <li> <a class="page-scroll" href="#skills">专业技能</a> </li>
-          <li> <a class="page-scroll" href="#resume">大学生活</a> </li>
+          <li> <a class="page-scroll" href="#resume">项目经验</a> </li>
           <li> <a class="page-scroll" href="#testimonials">暂时待定</a> </li>
           <li> <a class="page-scroll" href="#contact">联系作者</a> </li>
         </ul>
@@ -140,19 +140,19 @@
 <div id="portfolio">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>项目经验</h2>
+      <h2>大学生活</h2>
       <hr>
       <div class="clearfix"></div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+      <p>大学四年的酸甜苦辣，青春就是用来怀念的~</p>
     </div>
     <div class="categories">
       <ul class="cat">
         <li>
           <ol class="type">
-            <li><a href="#" data-filter="*" class="active">All</a></li>
-            <li><a href="#" data-filter=".web">Web Design</a></li>
-            <li><a href="#" data-filter=".app">App Development</a></li>
-            <li><a href="#" data-filter=".branding">Branding</a></li>
+            <li><a href="#" data-filter="*" class="active">全部</a></li>
+            <li><a href="#" data-filter=".web">学生工作</a></li>
+            <li><a href="#" data-filter=".app">校园景色</a></li>
+            <li><a href="#" data-filter=".branding">毕业照</a></li>
           </ol>
         </li>
       </ul>
@@ -164,8 +164,8 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/01.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small>
+                <h4>大学生活</h4>
+                <small>学生工作</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
               <img src="img/portfolio/01.jpg" class="img-responsive" alt="Project Title"> </a> </div>
@@ -175,8 +175,8 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/02.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development</small>
+                <h4>大学生活</h4>
+                <small>校园景色</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
               <img src="img/portfolio/02.jpg" class="img-responsive" alt="Project Title"> </a> </div>
@@ -186,8 +186,8 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/03.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small>
+                <h4>大学生活</h4>
+                <small>学生工作</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
               <img src="img/portfolio/03.jpg" class="img-responsive" alt="Project Title"> </a> </div>
@@ -197,8 +197,8 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/04.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small>
+                <h4>大学生活</h4>
+                <small>学生工作</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
               <img src="img/portfolio/04.jpg" class="img-responsive" alt="Project Title"> </a> </div>
@@ -208,8 +208,8 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/05.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development</small>
+                <h4>大学生活</h4>
+                <small>校园景色</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
               <img src="img/portfolio/05.jpg" class="img-responsive" alt="Project Title"> </a> </div>
@@ -219,8 +219,8 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/06.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Branding</small>
+                <h4>大学生活</h4>
+                <small>毕业照</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
               <img src="img/portfolio/06.jpg" class="img-responsive" alt="Project Title"> </a> </div>
@@ -230,8 +230,8 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/07.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development, Branding</small>
+                <h4>大学生活</h4>
+                <small>校园景色</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
               <img src="img/portfolio/07.jpg" class="img-responsive" alt="Project Title"> </a> </div>
@@ -241,8 +241,8 @@
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/08.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small>
+                <h4>大学生活</h4>
+                <small>学生工作</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
               <img src="img/portfolio/08.jpg" class="img-responsive" alt="Project Title"> </a> </div>
@@ -270,13 +270,13 @@
         <h4>jQuery</h4>
       </div>
       <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="80"> <span class="percent">80</span> </span>
-        <h4>WordPress</h4>
+        <h4>ECMAJavascript</h4>
       </div>
       <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="70"> <span class="percent">70</span> </span>
-        <h4>Photoshop</h4>
+        <h4>PHP</h4>
       </div>
       <div class="col-md-4 col-sm-6 skill"> <span class="chart" data-percent="65"> <span class="percent">65</span> </span>
-        <h4>Illustrator</h4>
+        <h4>NodeJs</h4>
       </div>
     </div>
   </div>
@@ -285,7 +285,7 @@
 <div id="resume" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>学生工作</h2>
+      <h2>项目经验</h2>
       <hr>
     </div>
     <div class="row">
@@ -345,7 +345,7 @@
   </div>
   <div class="container">
     <div class="section-title center">
-      <h2>教育经历</h2>
+      <h2>学生工作</h2>
       <hr>
     </div>
     <div class="row">
@@ -411,7 +411,7 @@
 <div id="achievements" class="section dark-bg">
   <div class="container">
     <div class="section-title center text-center">
-      <h2>Some stats</h2>
+      <h2>学习概要</h2>
       <hr>
     </div>
     <div class="row">
@@ -472,45 +472,45 @@
     <div class="section-title center">
       <h2>联系作者</h2>
       <hr>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcommodo.</p>
+      <p>欢迎给作者留言哦！</p>
     </div>
     <div class="col-md-8 col-md-offset-2">
       <div class="col-md-4"> <i class="fa fa-map-marker fa-2x"></i>
-        <p>321 Awesome Street<br>
-          New York, NY 17022</p>
+        <p>C区17栋南410~<br>
+          哈尔滨市黑龙江大学~</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-envelope-o fa-2x"></i>
-        <p>info@companyname.com</p>
+        <p>m18846089770@163.com</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-phone fa-2x"></i>
-        <p> +1 800 123 1234</p>
+        <p>188-4608-9770</p>
       </div>
       <hr>
       <div class="clearfix"></div>
     </div>
     <div class="col-md-8 col-md-offset-2">
-      <h3>Leave me a message</h3>
+      <h3>给我留言</h3>
       <form name="sentMessage" id="contactForm" novalidate>
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              <input type="text" id="name" class="form-control" placeholder="Name" required="required">
+              <input type="text" id="name" class="form-control" placeholder="姓名" required="required">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <input type="email" id="email" class="form-control" placeholder="Email" required="required">
+              <input type="email" id="email" class="form-control" placeholder="邮箱" required="required">
               <p class="help-block text-danger"></p>
             </div>
           </div>
         </div>
         <div class="form-group">
-          <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
+          <textarea name="message" id="message" class="form-control" rows="4" placeholder="内容" required></textarea>
           <p class="help-block text-danger"></p>
         </div>
         <div id="success"></div>
-        <button type="submit" class="btn btn-default">Send Message</button>
+        <button type="submit" class="btn btn-default">发送留言</button>
       </form>
       <div class="social">
         <ul>
@@ -528,7 +528,7 @@
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
-      <p>Copyright &copy; 2015 Chris James. More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+      <p>Copyright &copy; 2017 MoChi Liu. </p>
     </div>
   </div>
   <a href="#" id="toTop" style="display: none;"><span id="toTopHover" style="opacity: 0;"></span></a> </div>
