我的个人网站

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -42,10 +42,18 @@
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
+    <!-- 预加载 -->
+    <div class="preloader">
+      <div class="status"></div>
+    </div>
+
 <!-- Header -->
 <header class="intro">
   <div class="intro-body">
     <div class="container">
+      <div class="touxiang">
+        <img src="img/aboutme.jpg" alt=""/>
+      </div>
       <div class="row">
         <div class="da-arrows"> <span class="da-arrows-prev"></span> <span class="da-arrows-next"></span> </div>
         <div class="intro-text">
@@ -90,7 +98,7 @@
       <hr>
     </div>
     <div class="row">
-      <div class="col-md-12 text-center"><img src="img/aboutme.jpg" class="img-responsive"></div>
+      <div class="col-md-12 text-center"><img src="img/aboutme2.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
           <p>&nbsp;&nbsp;&nbsp;姓名：刘沫池&nbsp;&nbsp;&nbsp;性别:男&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;出生年月:1996.04.30&nbsp;&nbsp;&nbsp;&nbsp;就读院校：黑龙江大学</p>
@@ -549,5 +557,6 @@
 <script type="text/javascript" src="js/owl.carousel.js"></script> 
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/slider.js"></script>
+<script type="text/javascript" src="js/preloader.js"></script>
 </body>
 </html>
