我的个人网站

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -59,7 +59,7 @@
         <div class="intro-text">
           <h1>Hello, I'm MoChi Liu</h1>
           <p>应聘职位：web前端工程师</p>
-          <a href="#about" class="btn btn-default btn-lg page-scroll">关于我</a> <a href="#portfolio" class="btn btn-default btn-lg page-scroll">我的项目</a>
+          <a href="#about" class="btn btn-default btn-lg page-scroll">关于我</a> <a href="#resume" class="btn btn-default btn-lg page-scroll">我的项目</a>
         </div>
       </div>
     </div>
