我的个人网站

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -29,8 +29,8 @@
     ================================================== -->
 <link rel="stylesheet" type="text/css"  href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
-<link href='http://fonts.useso.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
-<link href='http://fonts.useso.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
+<!--<link href='http://fonts.useso.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>-->
+<!--<link href='http://fonts.useso.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>-->
 <script type="text/javascript" src="js/modernizr.custom.js"></script>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -54,12 +54,17 @@
       <div class="touxiang">
         <img src="img/aboutme.jpg" alt=""/>
       </div>
+      <div class="da-arrows"> <span class="da-arrows-prev"></span> <span class="da-arrows-next"></span> </div>
       <div class="row">
-        <div class="da-arrows"> <span class="da-arrows-prev"></span> <span class="da-arrows-next"></span> </div>
         <div class="intro-text">
-          <h1>Hello, I'm MoChi Liu</h1>
+          <h1 class="show">Hello, I'm MoChi Liu</h1>
           <p>应聘职位：web前端工程师</p>
           <a href="#about" class="btn btn-default btn-lg page-scroll">关于我</a> <a href="#resume" class="btn btn-default btn-lg page-scroll">我的项目</a>
+        </div>
+        <div class="intro-text2">
+          <h1>黑龙江大学</h1>
+          <p>嘎嘎嘎</p>
+          <!--<a href="#about" class="btn btn-default btn-lg page-scroll">关于我</a> <a href="#resume" class="btn btn-default btn-lg page-scroll">我的项目</a>-->
         </div>
       </div>
     </div>
@@ -125,20 +130,20 @@
     <div class="space"></div>
     <div class="row">
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-laptop"></i>
-        <h4>Web Design</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+        <h4>UI设计</h4>
+        <p>具备良好的视觉呈现以及页面表现能力，较高的审美能力和页面创意，熟练使用photoshop等软件，能积极与开发沟通，推进界面及交互设计的最终实现。</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-code"></i>
-        <h4>Development</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p>
+        <h4>前端开发</h4>
+        <p></p>我能够负责公司项目的前端UI与交互开发，确保在不同平台、设备、浏览器上均拥有优质的用户体验。与设计人员，后台工程师配合完成系统前后端整合；实现网站的整体页面风格、特效、JS效果以及网站的页面优化。</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-rocket"></i>
-        <h4>Branding</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+        <h4>活动策划</h4>
+        <p>我可以负责各类商业活动的策划与组织实施，组织指导撰写各种公关活动方案，据市场信息及行业动态，进行活动策划和执行；</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-bullhorn"></i>
-        <h4>Marketing</h4>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p>
+        <h4>产品营销</h4>
+        <p> 我可以与用户和潜在用户交流，与直接面对客户的一线同事（如销售、客服、技术支持等）交流研究 试用竞争产品，仔细观察用户行为等</p>
       </div>
     </div>
   </div>
@@ -301,7 +306,7 @@
         <ul class="timeline">
           <li>
             <div class="timeline-image">
-              <h4>Feb 2013 <br>
+              <h4>2016.10<br>
                 - <br>
                 Present </h4>
             </div>
