我的个人网站

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -300,6 +300,7 @@
     <div class="section-title center">
       <h2>项目经验</h2>
       <hr>
+      <h4>我的github：<a class="aa" href="https://github.com/liumochi">https://github.com/liumochi</a></h4>
     </div>
     <div class="row">
       <div class="col-lg-12">
@@ -308,49 +309,75 @@
             <div class="timeline-image">
               <h4>2016.10<br>
                 - <br>
-                Present </h4>
+                2016.11 </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Creative Agency</h4>
-                <h4 class="subheading">UX Developer</h4>
+                <h4>小恩爱相册</h4>
+                <h4 class="subheading">https://github.com/liumochi/-photos.git</h4>
               </div>
               <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <p>对移动端开发和响应式设计的兴趣，偶然在APP商店发现此应用，出于兴趣制作此小恩爱相册，首页是一个照片墙，点击查看大图，可以左右滑动进行图片切换。
+                  </p>
               </div>
             </div>
           </li>
           <li class="timeline-inverted">
             <div class="timeline-image">
-              <h4>Nov 2011 <br>
+              <h4>2016.12 <br>
                 - <br>
-                Jan 2013 </h4>
+                2017.2 </h4>
             </div>
+
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Creative Agency</h4>
-                <h4 class="subheading">Front-end Developer</h4>
+                <h4>personal website(个人网站)</h4>
+                <h4 class="subheading">https://github.com/liumochi/personal-website.git</h4>
               </div>
               <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <p> 该项目为一个人网站，用户可以通过IP地址或者域名访问网站，介绍本人从接触前端开始学
+                  习的内容以及个人简历，兴趣爱好，记录自己的生活等。</p>
               </div>
             </div>
+
           </li>
           <li>
             <div class="timeline-image">
-              <h4>Dec 2009 <br>
+              <h4>2016.10<br>
                 - <br>
-                May 2011 </h4>
+                至今</h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Creative Agency</h4>
-                <h4 class="subheading">UX Designer</h4>
+                <h4>个人学习记录实例</h4>
+                <h4 class="subheading"></h4>
               </div>
               <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <ul>
+                  <li class="cc"><a href="test1/3d轮播图.html" target="_blank">动画3D轮播</a></li>
+                  <li><a href="test2/照片墙合并.html" target="_blank">科比的照片墙</a></li>
+                  <li><a href="test3/旋转的立方体.html" target="_blank">旋转的立方体</a></li>
+                  <li><a href="#" target="_blank">旋转木马</a></li>
+                  <li><a href="#" target="_blank">简易画图工具</a></li>
+                </ul>
               </div>
             </div>
+          <li class="timeline-inverted">
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>个人学习记录实例</h4>
+              </div>
+              <div class="timeline-body">
+                <ul>
+                  <li class="cc"><a href="7_网上商城/index.html" target="_blank">静态网上商城首页</a></li>
+                  <li><a href="#" target="_blank">拼图小游戏</a></li>
+                  <li><a href="#" target="_blank"></a></li>
+                  <li><a href="#" target="_blank"></a></li>
+                  <li><a href="#" target="_blank"></a></li>
+                </ul>
+              </div>
+            </div>
+        </li>
           </li>
         </ul>
       </div>
@@ -364,54 +391,56 @@
     <div class="row">
       <div class="col-lg-12">
         <ul class="timeline">
-          
-          <!-- Education Section-->
+
           
           <li>
             <div class="timeline-image">
-              <h4>2010 <br>
+              <h4>2015.09 <br>
                 - <br>
-                2011 </h4>
+                2016.09 </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Design University</h4>
-                <h4 class="subheading">Master Degree of Design</h4>
+                <h4>黑龙江大学学生会</h4>
+                <h4 class="subheading">文艺部部长</h4>
               </div>
               <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <p>曾组织策划校级、院级大小晚会40余场，负责晚会节目道具、灯光、放音等后台工作；参与主办‘黑大首届男生节’；曾与部门小伙伴邀请‘睡在我上铺的兄弟’剧组主角来到黑大音乐厅并参与工作；曾代表学校
+                  于大二暑假至南京参加江苏警官学院主办2016年军事课教学展示（试图用图）并取得优异成绩；</p>
               </div>
             </div>
           </li>
           <li class="timeline-inverted">
             <div class="timeline-image">
-              <h4>2007 <br>
+              <h4>2016-04 <br>
                 - <br>
-                2010 </h4>
+                2017-04 </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Design University</h4>
-                <h4 class="subheading">Bachelor Degree of Design</h4>
+                <h4>信息科学与技术学院</h4>
+                <h4 class="subheading">院学生会副主席</h4>
               </div>
               <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <p>黑龙江大学青马工程菁英班二期学员，在学院里
+                  帮助老师日常工作，负责学院迎新活动，改良学院微信公众平台并与商家合作为公众号平台涨2000以上
+                  粉丝，负责学院网络实验室并组织同学完成课堂项目实验；</p>
               </div>
             </div>
           </li>
           <li>
             <div class="timeline-image">
-              <h4>2004 <br>
+              <h4>2016.09<br>
                 - <br>
-                2007 </h4>
+                2016.11 </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>School Name</h4>
-                <h4 class="subheading">High School Degree</h4>
+                <h4>新生党员班主任</h4>
+                <h4 class="subheading">班级文艺委员</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <p class="text-muted">负责管理新生入校后的军训、早操、自习等工作</p>
               </div>
             </div>
           </li>
