我的个人网站

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -41,8 +41,10 @@
     <![endif]-->
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+  <!--网页粒子效果-->
+  <script src="js/canvas-nest.js"></script>
 
-    <!-- 预加载 -->
+  <!-- 预加载 -->
     <div class="preloader">
       <div class="status"></div>
     </div>
@@ -295,7 +297,8 @@
   </div>
 </div>
 <!-- Resume Section -->
-<div id="resume" class="text-center">
+
+  <div id="resume" class="text-center">
   <div class="container">
     <div class="section-title center">
       <h2>项目经验</h2>
