我的个人网站

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -36,8 +36,8 @@
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <!--<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>-->
+      <!--<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>-->
     <![endif]-->
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -50,28 +50,23 @@
     </div>
 
 <!-- Header -->
-<header class="intro">
-  <div class="intro-body">
-    <div class="container">
-      <div class="touxiang">
-        <img src="img/aboutme.jpg" alt=""/>
-      </div>
-      <div class="da-arrows"> <span class="da-arrows-prev"></span> <span class="da-arrows-next"></span> </div>
-      <div class="row">
-        <div class="intro-text">
-          <h1 class="show">Hello, I'm MoChi Liu</h1>
-          <p>应聘职位：web前端工程师</p>
-          <a href="#about" class="btn btn-default btn-lg page-scroll">关于我</a> <a href="#resume" class="btn btn-default btn-lg page-scroll">我的项目</a>
+  <header class="intro">
+    <div class="intro-body">
+      <div class="container">
+        <div class="touxiang">
+          <img src="img/aboutme.jpg" alt=""/>
         </div>
-        <div class="intro-text2">
-          <h1>黑龙江大学</h1>
-          <p>嘎嘎嘎</p>
-          <!--<a href="#about" class="btn btn-default btn-lg page-scroll">关于我</a> <a href="#resume" class="btn btn-default btn-lg page-scroll">我的项目</a>-->
+        <!--<div class="da-arrows"> <span class="da-arrows-prev"></span> <span class="da-arrows-next"></span> </div>-->
+        <div class="row">
+          <div class="intro-text">
+            <h1 class="show">Hello, I'm MoChi Liu</h1>
+            <p>应聘职位：web前端工程师</p>
+            <a href="#about" class="btn btn-default btn-lg page-scroll">关于我</a> <a href="#resume" class="btn btn-default btn-lg page-scroll">我的项目</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
 <!-- Navigation -->
 <div id="nav">
   <nav class="navbar navbar-custom">
@@ -108,10 +103,10 @@
       <div class="col-md-12 text-center"><img src="img/aboutme2.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
-          <p>&nbsp;&nbsp;&nbsp;姓名：刘沫池&nbsp;&nbsp;&nbsp;性别:男&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;出生年月:1996.04.30&nbsp;&nbsp;&nbsp;&nbsp;就读院校：黑龙江大学</p>
-          <p>&nbsp;&nbsp;&nbsp;现居住地：黑龙江省哈尔滨市&nbsp;&nbsp;&nbsp;&nbsp;专业:网络工程&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;意向城市:北京/上海/杭州</p>
-          <p>&nbsp;&nbsp;&nbsp;本人勤奋认真，做事热情积极，较强的责任心。环境适应能力强，能够很快适应新的工作环境。具备团队合作意识，善于协调团队中的人际关系。能够虚心接受他人的意见与建议，对符合的予以采纳。</p>
-          <p>&nbsp;&nbsp;&nbsp;1.熟练使用HTML，CSS,Javascript等前端技术，熟练使用DIV+CSS布局。
+          <p>姓名：刘沫池&nbsp;&nbsp;&nbsp;性别:男&nbsp;&nbsp;&nbsp;出生年月:1996.04.30&nbsp;&nbsp;&nbsp;就读院校：黑龙江大学</p>
+          <p>现居住地：黑龙江省哈尔滨市&nbsp;&nbsp;&nbsp;&nbsp;专业:网络工程&nbsp;&nbsp;&nbsp;&nbsp;意向城市:北京/上海/杭州</p>
+          <p>本人勤奋认真，做事热情积极，较强的责任心。环境适应能力强，能够很快适应新的工作环境。具备团队合作意识，善于协调团队中的人际关系。能够虚心接受他人的意见与建议，对符合的予以采纳。</p>
+          <p>1.熟练使用HTML，CSS,Javascript等前端技术，熟练使用DIV+CSS布局。
             2.熟悉W3C标准，了解各主流浏览器兼容性问题。
             3.熟练使用JQ及JS原生DOM操作 。
             4.熟悉Ajax后台交互。对Bootstrap， AngularJS/VueJs等前端MVC框架有一定了解。
@@ -462,22 +457,22 @@
     <div class="row">
       <div class="col-md-3 col-sm-3">
         <div class="achievement-box"> <i class="fa fa-smile-o"></i> <span class="count">120</span>
-          <h4>Happy clients</h4>
+          <h4>1</h4>
         </div>
       </div>
       <div class="col-md-3 col-sm-3">
         <div class="achievement-box"> <i class="fa fa-code"></i> <span class="count">4,600</span>
-          <h4>Working hours</h4>
+          <h4>学习时长</h4>
         </div>
       </div>
       <div class="col-md-3 col-sm-3">
         <div class="achievement-box"> <i class="fa fa-check-square-o"></i> <span class="count">340</span>
-          <h4>Projects completed</h4>
+          <h4>上传代码</h4>
         </div>
       </div>
       <div class="col-md-3 col-sm-3">
         <div class="achievement-box"> <i class="fa fa-trophy"></i> <span class="count">23</span>
-          <h4>Awards won</h4>
+          <h4></h4>
         </div>
       </div>
     </div>
