--- a/Resume/index.html
+++ b/Resume/index.html
@@ -7,8 +7,6 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<!-- Favicons
-    ================================================== -->
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
@@ -20,25 +18,18 @@
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
 
-<!-- Slider
-    ================================================== -->
+<!-- 轮播
+   -->
 <link href="css/owl.carousel.css" rel="stylesheet" media="screen">
 <link href="css/owl.theme.css" rel="stylesheet" media="screen">
 
-<!-- Stylesheet
-    ================================================== -->
+<!-- 样式
+   -->
 <link rel="stylesheet" type="text/css"  href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
-<!--<link href='http://fonts.useso.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>-->
-<!--<link href='http://fonts.useso.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>-->
+
 <script type="text/javascript" src="js/modernizr.custom.js"></script>
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <!--<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>-->
-      <!--<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>-->
-    <![endif]-->
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
   <!--网页粒子效果-->
@@ -49,7 +40,7 @@
       <div class="status"></div>
     </div>
 
-<!-- Header -->
+<!-- 头部 -->
   <header class="intro">
     <div class="intro-body">
       <div class="container">
@@ -67,18 +58,16 @@
       </div>
     </div>
   </header>
-<!-- Navigation -->
+<!-- 导航 -->
 <div id="nav">
   <nav class="navbar navbar-custom">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> <i class="fa fa-bars"></i> </button>
         <a class="navbar-brand page-scroll" href="#page-top">MoChi Liu</a> </div>
-      
-      <!-- Collect the nav links, forms, and other content for toggling -->
+
       <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
         <ul class="nav navbar-nav">
-          <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
           <li class="hidden"> <a href="#page-top"></a> </li>
           <li> <a class="page-scroll" href="#about">个人信息</a> </li>
           <li> <a class="page-scroll" href="#services">工作能力</a> </li>
@@ -92,7 +81,7 @@
     </div>
   </nav>
 </div>
-<!-- About Section -->
+<!-- 个人信息 -->
 <div id="about">
   <div class="container">
     <div class="section-title text-center center">
@@ -117,7 +106,7 @@
     </div>
   </div>
 </div>
-<!-- Services Section -->
+<!-- 工作能力-->
 <div id="services" class="text-center">
   <div class="container">
     <div class="section-title center">
@@ -146,7 +135,7 @@
   </div>
 </div>
 <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >网页模板</a></div>
-<!-- Portfolio Section -->
+
 <div id="portfolio">
   <div class="container">
     <div class="section-title text-center center">
@@ -262,7 +251,7 @@
     </div>
   </div>
 </div>
-<!-- Skills Section -->
+
 <div id="skills" class="text-center">
   <div class="container">
     <div class="section-title center">
@@ -291,7 +280,7 @@
     </div>
   </div>
 </div>
-<!-- Resume Section -->
+
 
   <div id="resume" class="text-center">
   <div class="container">
@@ -447,7 +436,7 @@
     </div>
   </div>
 </div>
-<!-- Achievements Section -->
+
 <div id="achievements" class="section dark-bg">
   <div class="container">
     <div class="section-title center text-center">
@@ -457,7 +446,7 @@
     <div class="row">
       <div class="col-md-3 col-sm-3">
         <div class="achievement-box"> <i class="fa fa-smile-o"></i> <span class="count">120</span>
-          <h4>1</h4>
+          <h4>积极向上</h4>
         </div>
       </div>
       <div class="col-md-3 col-sm-3">
@@ -472,13 +461,13 @@
       </div>
       <div class="col-md-3 col-sm-3">
         <div class="achievement-box"> <i class="fa fa-trophy"></i> <span class="count">23</span>
-          <h4></h4>
+          <h4>得到奖项</h4>
         </div>
       </div>
     </div>
   </div>
 </div>
-<!-- Testimonials Section -->
+
 <div id="testimonials" class="text-center">
   <div class="container">
     <div class="section-title center">
@@ -506,7 +495,6 @@
   </div>
 </div>
 
-<!-- Contact Section -->
 <div id="contact" class="text-center">
   <div class="container">
     <div class="section-title center">
